media/css/mozorg/about-base.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import "../sandstone/lib.less";

#wrapper {
    width: 100%;
}

#masthead,
#main-content,
.billboard {
    width: @widthDesktop - (@gridGutterWidth * 2);
    margin-left: auto;
    margin-right: auto;
}

#main-content {
    .open-sans;
    display: block;
    margin: 100px auto @baseLine;
    padding-left: @gridGutterWidth;
    padding-right: @gridGutterWidth;
    position: relative;
    .clearfix;
    @shadow: 0 0 0 1px #fff inset;
    .box-shadow(@shadow);
    background: #fff;
    border-bottom: 1px solid #ddd;

    .title-shadow-box {
        min-height: 80px;

        & + p {
            clear: left;
        }
    }

    .intro {
        .open-sans-light;
        font-size: 28px;
        line-height: 1.3;
        letter-spacing: -.5px;
        .span(4);
        clear: left;
        margin-top: -.25em;
    }

    ul.links {
        .span(4);

        li {
            list-style-type: none;
            margin-left: 0;
            margin-bottom: @baseLine;
            padding-bottom: 10px;
            background: url(/media/img/mission/thin-stripe.png) center bottom repeat-x;
            min-height: @baseLine * 4;
        }

        li:last-child {
            padding: 0;
            background-image: none;
        }

        h4 {
            margin-bottom: @baseLine / 6;
            a:after {
                content: " »";
                font-family: 'Open Sans Light',sans-serif;
                font-weight: 300;
            }
        }

        p {
            font-size: .857em;
            margin-bottom: @baseLine / 2;
        }
    }

    li > ul {
        margin-bottom: @baseLine;
    }

}

/* Tablet Layout: 760px */
@media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {

    #masthead,
    #main-content,
    .billboard {
        width: @widthTablet - (@gridGutterWidth * 2);
    }

    #main-content {

        .intro {
            .span_narrow(4);
            font-size: 22px;
        }

        ul.links {
            .span_narrow(4);
            h4 {
                font-size: 20px;
            }
        }

    }

}

/* Mobile layout: 320px */
@media only screen and (max-width: @breakTablet) {

    #masthead,
    #main-content,
    .billboard {
        width: @widthMobile - (@gridGutterWidth * 2);
    }

    .billboard {
        padding-left: @gridGutterWidth;
        padding-right: @gridGutterWidth;
    }

    #main-content {
        margin-bottom: @baseLine;

        .intro {
            width: auto;
            font-size: 1em;
            margin-bottom: @baseLine;
        }

        ul.links {
            width: auto;
            margin-bottom: 0;
            li {
                min-height: 0;
            }
        }

    }

}

/* Wide mobile layout: 480px; */
@media only screen and (min-width: @breakMobileLandscape) and (max-width: @breakTablet) {

    #masthead,
    #main-content,
    .billboard {
        width: @widthMobileLandscape - @gridGutterWidth;
    }

    #main-content {
        .title-shadow-box {
            min-width: 380px;
            margin: -25px 0 40px;
        }

        .intro {
            .span_narrow(3);
        }

        ul.links {
            .span_narrow(4);
            float: right;
            clear: right;
        }

    }

}

